[gd_scene load_steps=29 format=3 uid="uid://bpp4lkew42ktc"]

[ext_resource type="Script" path="res://scenes/test_player/TestPlayer.gd" id="1_rdkam"]
[ext_resource type="Script" path="res://scripts/utils/StateMachine.gd" id="2_5crwv"]
[ext_resource type="Texture2D" uid="uid://wvx5ncj5p6o5" path="res://assets/sprites/characters/captain/01-Idle/Idle 01.png" id="2_5llfj"]
[ext_resource type="Texture2D" uid="uid://btfnmjbu1arxi" path="res://assets/sprites/characters/captain/04-Fall/Fall 01.png" id="3_egfdl"]
[ext_resource type="Script" path="res://scripts/state_machines/test_player_states/TestPlayerStateIdle.gd" id="3_y6brr"]
[ext_resource type="Texture2D" uid="uid://bqc6fistlf2my" path="res://assets/sprites/characters/captain/01-Idle/Idle 02.png" id="4_0j4jg"]
[ext_resource type="Script" path="res://scripts/state_machines/test_player_states/TestPlayerStateRunning.gd" id="4_f8v35"]
[ext_resource type="Texture2D" uid="uid://x7q61uynyunf" path="res://assets/sprites/characters/captain/01-Idle/Idle 03.png" id="5_qkss3"]
[ext_resource type="Texture2D" uid="uid://1yh1qtuaxkid" path="res://assets/sprites/characters/captain/01-Idle/Idle 04.png" id="6_chra3"]
[ext_resource type="Script" path="res://scripts/state_machines/test_player_states/TestPlayerStateJumping.gd" id="6_mx7yt"]
[ext_resource type="Script" path="res://scripts/state_machines/test_player_states/TestPlayerStateFalling.gd" id="7_q0tld"]
[ext_resource type="Texture2D" uid="uid://djr7fxdayq6ym" path="res://assets/sprites/characters/captain/01-Idle/Idle 05.png" id="7_u3gwp"]
[ext_resource type="Texture2D" uid="uid://c04y2y1nahas6" path="res://assets/sprites/characters/captain/03-Jump/Jump 01.png" id="8_gruog"]
[ext_resource type="Texture2D" uid="uid://bc6g0ohpakccd" path="res://assets/sprites/characters/captain/03-Jump/Jump 02.png" id="9_byqx8"]
[ext_resource type="Texture2D" uid="uid://dlklftcidnnf3" path="res://assets/sprites/characters/captain/03-Jump/Jump 03.png" id="10_xtxqi"]
[ext_resource type="Texture2D" uid="uid://di6ik71ujevtq" path="res://assets/sprites/characters/captain/02-Run/Run 01.png" id="11_0gjn1"]
[ext_resource type="Texture2D" uid="uid://b7ftq70cdr57j" path="res://assets/sprites/characters/captain/02-Run/Run 02.png" id="12_b4ous"]
[ext_resource type="Texture2D" uid="uid://cm0jsavguro1t" path="res://assets/sprites/characters/captain/02-Run/Run 03.png" id="13_71lml"]
[ext_resource type="Texture2D" uid="uid://c2jh171hw1igc" path="res://assets/sprites/characters/captain/02-Run/Run 04.png" id="14_18kfj"]
[ext_resource type="Texture2D" uid="uid://coyrbjg3x42jp" path="res://assets/sprites/characters/captain/02-Run/Run 05.png" id="15_4pqhk"]
[ext_resource type="Texture2D" uid="uid://qdw7yag6712q" path="res://assets/sprites/characters/captain/02-Run/Run 06.png" id="16_hx7gr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ugq51"]
radius = 9.0
height = 24.0

[sub_resource type="Animation" id="Animation_w4576"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_5llfj")]
}

[sub_resource type="Animation" id="Animation_kktaa"]
resource_name = "captain_falling"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_egfdl")]
}

[sub_resource type="Animation" id="Animation_1wi6n"]
resource_name = "captain_idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("2_5llfj"), ExtResource("4_0j4jg"), ExtResource("5_qkss3"), ExtResource("6_chra3"), ExtResource("7_u3gwp")]
}

[sub_resource type="Animation" id="Animation_hiiu6"]
resource_name = "captain_jumping"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("8_gruog"), ExtResource("9_byqx8"), ExtResource("10_xtxqi")]
}

[sub_resource type="Animation" id="Animation_0d4yq"]
resource_name = "captain_running"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("11_0gjn1"), ExtResource("12_b4ous"), ExtResource("13_71lml"), ExtResource("14_18kfj"), ExtResource("15_4pqhk"), ExtResource("16_hx7gr")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0hj4"]
_data = {
"RESET": SubResource("Animation_w4576"),
"captain_falling": SubResource("Animation_kktaa"),
"captain_idle": SubResource("Animation_1wi6n"),
"captain_jumping": SubResource("Animation_hiiu6"),
"captain_running": SubResource("Animation_0d4yq")
}

[node name="test_player" type="CharacterBody2D"]
script = ExtResource("1_rdkam")

[node name="sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_5llfj")

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ugq51")

[node name="animation_player" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o0hj4")
}

[node name="state_smachine" type="Node" parent="." node_paths=PackedStringArray("default_state")]
script = ExtResource("2_5crwv")
default_state = NodePath("test_player_state_idle")

[node name="test_player_state_idle" type="Node" parent="state_smachine"]
script = ExtResource("3_y6brr")

[node name="test_player_state_running" type="Node" parent="state_smachine"]
script = ExtResource("4_f8v35")

[node name="test_player_state_jumping" type="Node" parent="state_smachine"]
script = ExtResource("6_mx7yt")

[node name="test_player_state_falling" type="Node" parent="state_smachine"]
script = ExtResource("7_q0tld")
